--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Personal CV</title>
     <link rel ="stylesheet" href = "style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -25,13 +25,13 @@
                     <!-- The slideshow/carousel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                        <img src="Picture/BGCard.gif" alt="Summer" class="d-block w-100" style="width:100%">
+                        <img src="./Picture/BGCard.gif" alt="Summer" class="d-block w-100" style="width:100%">
                             <div class="carousel-caption">
                                 <h3 class="glow-text"><strong>CAMT</strong></h3>
                             </div>
                         </div>
                         <div class="carousel-item">
-                        <img src="Picture/BGCard2.gif" alt="Winter" class="d-block w-100" style="width:100%">
+                        <img src="./Picture/BGCard2.gif" alt="Winter" class="d-block w-100" style="width:100%">
                             <div class="carousel-caption">
                                 <h3 class="glow-text"><strong>DG</strong></h3>
                             </div> 
