--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <!-- The slideshow/carousel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                        <img src="./Picture/Background.gif" alt="Summer" class="d-block w-100" style="width:100%">
+                        <img src="./Picture/Background.png" alt="Summer" class="d-block w-100" style="width:100%">
                             <div class="carousel-caption">
                                 <h3 class="glow-text"><strong>CAMT</strong></h3>
                             </div>
                         </div>
                         <div class="carousel-item">
-                        <img src="./Picture/BackgroundWinter.gif" alt="Winter" class="d-block w-100" style="width:100%">
+                        <img src="./Picture/BackgroundWinter.png" alt="Winter" class="d-block w-100" style="width:100%">
                             <div class="carousel-caption">
                                 <h3 class="glow-text"><strong>DG</strong></h3>
                             </div> 
